; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_ex_getln.c_save_cmdline_alloc.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_ex_getln.c_save_cmdline_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cmdline_info = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @save_cmdline_alloc() #0 {
  %1 = alloca %struct.cmdline_info*, align 8
  %2 = call i64 @alloc(i32 4)
  %3 = inttoptr i64 %2 to %struct.cmdline_info*
  store %struct.cmdline_info* %3, %struct.cmdline_info** %1, align 8
  %4 = load %struct.cmdline_info*, %struct.cmdline_info** %1, align 8
  %5 = icmp ne %struct.cmdline_info* %4, null
  br i1 %5, label %6, label %9

6:                                                ; preds = %0
  %7 = load %struct.cmdline_info*, %struct.cmdline_info** %1, align 8
  %8 = call i32 @save_cmdline(%struct.cmdline_info* %7)
  br label %9

9:                                                ; preds = %6, %0
  %10 = load %struct.cmdline_info*, %struct.cmdline_info** %1, align 8
  %11 = bitcast %struct.cmdline_info* %10 to i32*
  ret i32* %11
}

declare dso_local i64 @alloc(i32) #1

declare dso_local i32 @save_cmdline(%struct.cmdline_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
